# L-OOPS

./: CMakeLists.txt
02_MAR/: leap.c  marks.c  neg.c  sum.c  vowels.c
20_APR/: p1.cpp
28_FEB/: browsing.c  cgpa.c  commission.c  cost.c  gcd.c  odd.c  scholarship.c
