cmake_minimum_required(VERSION 3.25)
project(L_OOPS C)

set(CMAKE_C_STANDARD 11)

add_executable(L_OOPS
        02_MAR/leap.c
        02_MAR/marks.c
        02_MAR/neg.c
        02_MAR/sum.c
        02_MAR/vowels.c
        28_FEB/browsing.c
        28_FEB/cgpa.c
        28_FEB/commission.c
        28_FEB/cost.c
        28_FEB/gcd.c
        28_FEB/odd.c
        28_FEB/scholarship.c)
